@@ -14,10 +14,12 @@ Version 1.7.12+svn:
    * Updated translations: Czech, Finnish, French, German, Hungarian, Italian,
      Lithuanian, Polish, Portuguese (Brazil), Russian, Serbian.
 
- * Multiplayer
+ * Multiplayer:
    * An early test version of the multiplayer port of "Legend of Wesmere" 
      is available when starting wesnoth with the commandline argument "--debug".
 
+ * User interface:
+   * Fold serveral player groups by default in the lobby.
 
 Version 1.7.12-1.8beta5:
  * Campaigns:
