@@ -18,7 +18,11 @@ It's available when starting Wesnoth on the commandline with the "--debug" param
 
 ***
 
-REPLACE ME WITH CONTENT...
+Another round of lobby updates, replaced the player lists with a new widget
+which allows better resize handling. This player list only has the players in
+the current game unfolded by default.
+The game list still has some issues with updating its contents in some cases,
+which will, hopefully be fixed with the
 
 ***
 
